Bug: Overflow auto issue resolve

--- a/src/Sample.css
+++ b/src/Sample.css
@@ -66,3 +66,6 @@
   pointer-events: none;
   border-radius: 2px;
 }
+.rpv-core__inner-pages {
+  overflow: hidden !important;
+}
